[gd_scene load_steps=7 format=3 uid="uid://cdbn8n6j2dqlv"]

[ext_resource type="PackedScene" uid="uid://dmencs02fgeg6" path="res://Projectiles/Scene/BasicProjectile.tscn" id="1_ymq0k"]
[ext_resource type="Script" uid="uid://bh1shragighqn" path="res://Projectiles/Scripts/rocket.gd" id="2_5ct60"]
[ext_resource type="Texture2D" uid="uid://eix4fw4x7eh2" path="res://SpriteSheets/DrumBeat.png" id="3_4ijs4"]
[ext_resource type="Texture2D" uid="uid://bj1rohpuxij6j" path="res://SpriteSheets/rocketnote.png" id="3_trxgj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_trxgj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4ijs4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ct60"]
radius = 68.884

[node name="Rocket" instance=ExtResource("1_ymq0k")]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_5ct60")
rangeMult = 2.0
SPEED = 500.0
damage = 40

[node name="Sprite2D" parent="." index="0"]
modulate = Color(1, 0.917647, 0.211765, 1)
texture = ExtResource("3_trxgj")
flip_v = true

[node name="CollisionShape2D" parent="Area2D" index="0"]
visible = false

[node name="Explosion" type="Node2D" parent="." index="2"]

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="Explosion" index="0"]
visible = false
modulate = Color(0.152941, 0.12549, 1, 1)
sprite_frames = SubResource("SpriteFrames_trxgj")

[node name="ExplosionAOE" type="CollisionShape2D" parent="Explosion" index="1"]
visible = false
shape = SubResource("CircleShape2D_5ct60")

[connection signal="animation_finished" from="Explosion/ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
